Add html and styling to mobile header

--- a/index.html
+++ b/index.html
@@ -16,8 +16,24 @@
   </head>
   <body>
     <div class="page-wrapper">
-      <header></header>
-      <main>
+      <header class="header">
+        <img class="header__logo" src="./assets/shared/logo.svg" alt="" />
+        <a class="header__preorder-button" href="#">PRE-ORDER NOW</a>
+      </header>
+
+      <main class="tm">
+        <div class="tm__container">
+          <div class="tm__info">
+            <h1 class="tm__heading">TYPEMASTER KEYBOARD</h1>
+            <p class="tm__paragraph">Improve your productivity and gaming without breaking the bank. Upgrade to a high quality 
+              mechanical typing experience.</p>
+            <a class="tm__preorder-button header__preorder-button" href="#">PRE-ORDER NOW</a>
+            <span>RELEASE ON 5/27</span>
+          </div>
+          <div class="tm__image-container">
+            <img class="tm__keyboard-image" src="./assets/mobile/image-keyboard.jpg" alt="">
+          </div>
+        </div>
         <section></section>
         <section></section>
         <section></section>
