Add html and styling to mobile main

--- a/index.html
+++ b/index.html
@@ -22,19 +22,49 @@
       </header>
 
       <main class="tm">
-        <div class="tm__container">
+        <section class="tm__content-container-one">
           <div class="tm__info">
             <h1 class="tm__heading">TYPEMASTER KEYBOARD</h1>
-            <p class="tm__paragraph">Improve your productivity and gaming without breaking the bank. Upgrade to a high quality 
-              mechanical typing experience.</p>
-            <a class="tm__preorder-button header__preorder-button" href="#">PRE-ORDER NOW</a>
-            <span>RELEASE ON 5/27</span>
+            <p class="tm__paragraph">
+              Improve your productivity and gaming without breaking the bank.
+              Upgrade to a high quality mechanical typing experience.
+            </p>
+            <div class="tm__preorder-container">
+              <a class="tm__preorder-button header__preorder-button" href="#"
+                >PRE-ORDER NOW</a
+              >
+              <span class="tm__release-date">RELEASE ON 5/27</span>
+            </div>
           </div>
           <div class="tm__image-container">
-            <img class="tm__keyboard-image" src="./assets/mobile/image-keyboard.jpg" alt="">
+            <img
+              class="tm__keyboard-image"
+              src="./assets/mobile/image-keyboard.jpg"
+              alt=""
+            />
           </div>
-        </div>
-        <section></section>
+        </section>
+
+        <section class="tm_content-container-two">
+          <div class="tm__image-container-two">
+            <img
+              class="tm__keyboard-image-orange"
+              src="./assets/mobile/image-phone-and-keyboard.jpg"
+              alt=""
+            />
+            <img
+              class="tm__keyboard-image-table"
+              src="./assets/mobile/image-glass-and-keyboard.jpg"
+              alt=""
+            />
+          </div>
+          <div class="tm-text">
+            <h2 class="tm__subheading"> MECHANICAL WIRELESS KEYBOARD</h2>
+            <p class=" tm__paragraph--mechanical tm__paragraph ">The Typemaster keyboard boasts top-notch build and practical design. It offers a wide variety 
+              of switches and keycaps, along with reliable wireless connectivity.</p>
+          </div>
+        </section>
+
         <section></section>
         <section></section>
       </main>
