--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@
 
         <section class="tm_content-container-two">
           <div class="tm__image-container-two">
-            <img
-              class="tm__keyboard-image-orange"
-              src="./assets/mobile/image-phone-and-keyboard.jpg"
-              alt=""
-            />
+            <div class="tm__orange-filter">
+              <img
+                class="tm__keyboard-image-orange"
+                src="./assets/mobile/image-phone-and-keyboard.jpg"
+                alt=""
+              />
+            </div>
             <img
               class="tm__keyboard-image-table"
               src="./assets/mobile/image-glass-and-keyboard.jpg"
@@ -59,16 +61,49 @@
             />
           </div>
           <div class="tm-text">
-            <h2 class="tm__subheading"> MECHANICAL WIRELESS KEYBOARD</h2>
-            <p class=" tm__paragraph--mechanical tm__paragraph ">The Typemaster keyboard boasts top-notch build and practical design. It offers a wide variety 
-              of switches and keycaps, along with reliable wireless connectivity.</p>
+            <h2 class="tm__subheading">MECHANICAL WIRELESS KEYBOARD</h2>
+            <p class="tm__paragraph--mechanical tm__paragraph">
+              The Typemaster keyboard boasts top-notch build and practical
+              design. It offers a wide variety of switches and keycaps, along
+              with reliable wireless connectivity.
+            </p>
           </div>
         </section>
 
-        <section></section>
-        <section></section>
+        <section class="features">
+          <div class="features__feature">
+            <div class="features__icon--compatible features__icon"></div>
+            <h3 class="features__heading"> HIGHLY <span>COMPATIBLE</span> </h3>
+            <p class="features__paragraph">Easy to use and works well with all major computer brands, gaming consoles and mobile devices. 
+              Plug & play, no installation or driver needed.</p>
+          </div>
+
+          <div class="features__feature">
+            <div class="features__icon--bluetooth features__icon"></div>
+            <h3 class="features__heading"> WIRELESS <span>WITH BLUETOOTH</span> </h3>
+            <p class="features__paragraph">Powerful 2.4G RF technology allows you to connect the cordless keyboard from up to 30ft away. 
+              Simply plug the unifying receiver into your computer.</p>
+          </div>
+
+          <div class="features__feature">
+            <div class="features__icon--battery features__icon"></div>
+            <h3 class="features__heading"> HIGH CAPACITY <span>BATTERY</span> </h3>
+            <p class="features__paragraph">Equipped with a long-lasting built-in battery, you’ll never have to spend a dime on replaceable ones. 
+              Enjoy 40 hours of usage time between charges.</p>
+          </div>
+
+          <div class="features__feature">
+            <div class="features__icon--light features__icon"></div>
+            <h3 class="features__heading"> RGB BACKLIT <span>MODES</span> </h3>
+            <p class="features__paragraph">Choose from 4 backlight brightness levels and adjustable breathing speed. Each key glows intensely in the dark and helps
+              you type in low light conditions.</p>
+          </div>
+        </section>
       </main>
-      <footer></footer>
+
+      <footer class="footer">
+        <p class="footer__copyright"> <span>Typemaster 2022</span> | All Rights Reserved </p>
+      </footer>
     </div>
   </body>
 </html>
