Add desktop media queries

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <picture >
               <source media="(min-width:1440px)" srcset="./assets/desktop/image-keyboard.jpg">
               <source media="(min-width:768px)" srcset="./assets/tablet/image-keyboard.jpg">
-              <img class="tm__img" src="./assets/mobile/image-keyboard.jpg" alt="">
+              <img class="tm__keyboard-image" src="./assets/mobile/image-keyboard.jpg" alt="">
             </picture>
           </div>
         </section>
@@ -53,17 +53,14 @@
                 <source media="(min-width:768px)" srcset="./assets/tablet/image-phone-and-keyboard.jpg">
                 <img class="tm__keyboard-image-orange" src="./assets/mobile/image-phone-and-keyboard.jpg" alt="">
               </picture>
-              <!-- <img
-                class="tm__keyboard-image-orange"
-                src="./assets/mobile/image-phone-and-keyboard.jpg"
-                alt=""
-              /> -->
+              
             </div>
-            <img
-              class="tm__keyboard-image-table"
-              src="./assets/mobile/image-glass-and-keyboard.jpg"
-              alt=""
-            />
+            <picture >
+              <source media="(min-width:1440px)" srcset="./assets/desktop/image-glass-and-keyboard.jpg">
+              <source media="(min-width:768px)" srcset="./assets/tablet/image-glass-and-keyboard.jpg">
+              <img class="tm__keyboard-image-table" src="./assets/mobile/image-glass-and-keyboard.jpg" alt="">
+            </picture>
+         
           </div>
           <div class="tm__text">
             <h2 class="tm__subheading">MECHANICAL WIRELESS KEYBOARD</h2>
